# Real-Time-Fault-Tolerant-Data-Pipeline

./: .dockerignore  .gitignore  README.md  docker-compose.yaml
airflow/: Dockerfile  pyproject.toml  requirements.txt
airflow/dags/: avro_consumer.py  consume_avro_kafka_dag.py  run_flink_sql_dag.py
clickstream_producer/: Dockerfile  producer.py  pyproject.toml
clickstream_spark_consumer/: consumer.py  pyproject.toml
flink/sql-client/: Dockerfile  flink-conf.yaml
flink/sql-jobs/: clickstream-filtering.sql
notebooks/: consumer_spark.ipynb
notebooks/.ipynb_checkpoints/: consumer_spark-checkpoint.ipynb
spark/: Dockerfile  pyproject.toml  requirements.txt
spark/jobs/: avro_consumer.py
superset/: superset.db
topic_admin/: Dockerfile  create_topic.py  pyproject.toml
trino/etc/: config.properties
trino/etc/catalog/: iceberg.properties
