[project]
name = "airflow-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Naman Goyal",email = "naman.goyal@zypp.app"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka (>=2.10.1,<3.0.0)",
    "fastavro (>=1.11.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
