[project]
name = "clickstream-spark-consumer"
version = "0.1.0"
description = ""
authors = [
    {name = "Naman Goyal",email = "naman.goyal@zypp.app"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pyspark (>=4.0.0,<5.0.0)",
    "delta-spark (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
