[project]
name = "spark-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Naman Goyal",email = "naman.goyal@zypp.app"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastavro (>=1.11.1,<2.0.0)",
    "cachetools (>=6.1.0,<7.0.0)",
    "confluent-kafka (>=2.10.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyspark (>=4.0.0,<5.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "authlib (>=1.6.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
