[project]
name = "create_kafka_topic"
version = "0.1.0"
description = ""
authors = [
    {name = "Naman Goyal",email = "naman.goyal@zypp.app"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka-python (>=2.2.13,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
